ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/bitwiseNotOperator/bitwiseNotOperatorInvalidOperations/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/bitwiseNotOperator/bitwiseNotOperatorInvalidOperations/input.ts:5:10
  |
5 | var a = q~;  //expect error
  |          ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/bitwiseNotOperator/bitwiseNotOperatorInvalidOperations/input.ts:5:11
  |
5 | var a = q~;  //expect error
  |           ^

error: Unexpected token `string literal ()`. Expected yield, an identifier, [ or {
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/bitwiseNotOperator/bitwiseNotOperatorInvalidOperations/input.ts:8:27
  |
8 | var mul = ~[1, 2, "abc"], "";  //expect error
  |                           ^^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/bitwiseNotOperator/bitwiseNotOperatorInvalidOperations/input.ts:11:9
   |
11 | var b =~;
   |         ^

